test/error/ptr_match.gw
typedef void (test0)();
function void test1(int i){ int i;}
test1 @=> test0;
